added initial html layout

--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
   <title>WebDev Learning Journal</title>
 </head>
 <body>
+  <header>
+    <h1>My learning journal</h1>
+    <nav>
+      <ul>
+        <li>HOME</li>
+        <li>ABOUT ME</li>
+      </ul>
+    </nav>
+  </header>
+  <img src="assets/images/blog-image-hero.png" alt="home office overlooking a city sunset">
+  <p>July 23, 2023</p>
+  <h2>My new journey as a bootcamp student.</h2>
+  <p>After several months of learning in the Frontend Developer Career Path, I've made the big jump over to the Bootcamp to get expert code reviews of my Solo Projects projects and meet like-minded peers.</p>
+  <div class="blog-card">
+    <img src="assets/images/blog-image-05.png" alt="a desk with a coder's laptop">
+    <p class="date">July 23, 2023</p>
+    <h3>Blog one</h3>
+    <p>I'm excited to start a new learning journey as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p>
+  </div>
   
 </body>
 </html>
