added stylesheet and linked to html. began sizing for mobile viewport

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/styles.css">
   <title>WebDev Learning Journal</title>
 </head>
 <body>
@@ -15,7 +16,7 @@
       </ul>
     </nav>
   </header>
-  <img src="assets/images/blog-image-hero.png" alt="home office overlooking a city sunset">
+  <img class="article-image-hero" src="assets/images/blog-image-hero.png" alt="home office overlooking a city sunset">
   <p>July 23, 2023</p>
   <h2>My new journey as a bootcamp student.</h2>
   <p>After several months of learning in the Frontend Developer Career Path, I've made the big jump over to the Bootcamp to get expert code reviews of my Solo Projects projects and meet like-minded peers.</p>
@@ -25,6 +26,23 @@
     <h3>Blog one</h3>
     <p>I'm excited to start a new learning journey as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p>
   </div>
+  <div class="blog-card">
+    <img src="assets/images/blog-image-04.png" alt="a desk with a coder's laptop">
+    <p class="date">July 23, 2023</p>
+    <h3>Blog two</h3>
+    <p>I'm excited to start a new learning journey as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p>
+  </div>
+  <div class="blog-card">
+    <img src="assets/images/blog-image-03.png" alt="a desk with a coder's laptop">
+    <p class="date">July 23, 2023</p>
+    <h3>Blog three</h3>
+    <p>I'm excited to start a new learning journey as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p>
+  </div>
+  <h4>View More</h4>
+  <footer>
+    <h5>My Learning Journal</h5>
+    <p>Copyright 2023</p>
+  </footer>
   
 </body>
 </html>
