--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="assets/styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="assets/styles.css" />
   <title>WebDev Learning Journal</title>
 </head>
+
 <body>
-  <header>
+  <header class="grid-header">
     <h1>My learning journal</h1>
     <nav>
       <ul>
@@ -16,17 +18,25 @@
       </ul>
     </nav>
   </header>
-  <img class="article-image-hero" src="assets/images/blog-image-hero.png" alt="home office overlooking a city sunset">
-  <p>July 23, 2023</p>
-  <h2>My new journey as a bootcamp student.</h2>
-  <p>After several months of learning in the Frontend Developer Career Path, I've made the big jump over to the Bootcamp to get expert code reviews of my Solo Projects projects and meet like-minded peers.</p>
-  <div class="blog-card">
+  <div class="card hero-card">
+    <img class="article-image-hero" src="assets/images/blog-image-hero.png"
+      alt="home office overlooking a city sunset" />
+    <p>July 23, 2023</p>
+    <h2>My new journey as a bootcamp student.</h2>
+    <p>
+      After several months of learning in the Frontend Developer Career Path,
+      I've made the big jump over to the Bootcamp to get expert code reviews
+      of my Solo Projects projects and meet like-minded peers.
+    </p>
+  </div>
+
+  <!-- <div class="blog-card">
     <img src="assets/images/blog-image-05.png" alt="a desk with a coder's laptop">
     <p class="date">July 23, 2023</p>
     <h3>Blog one</h3>
     <p>I'm excited to start a new learning journey as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p>
-  </div>
-  <div class="blog-card">
+  </div> -->
+  <!-- <div class="blog-card">
     <img src="assets/images/blog-image-04.png" alt="a desk with a coder's laptop">
     <p class="date">July 23, 2023</p>
     <h3>Blog two</h3>
@@ -42,7 +52,7 @@
   <footer>
     <h5>My Learning Journal</h5>
     <p>Copyright 2023</p>
-  </footer>
-  
+  </footer> -->
 </body>
+
 </html>
