added new html cards for all blogs. set up ids and classes for all

--- a/index.html
+++ b/index.html
@@ -9,50 +9,92 @@
 </head>
 
 <body>
-  <header class="grid-header">
-    <h1>My learning journal</h1>
+  <header>
     <nav>
+      <h1>My learning journal</h1>
       <ul>
         <li>HOME</li>
         <li>ABOUT ME</li>
       </ul>
     </nav>
   </header>
-  <div class="card hero-card">
-    <img class="article-image-hero" src="assets/images/blog-image-hero.png"
-      alt="home office overlooking a city sunset" />
-    <p>July 23, 2023</p>
-    <h2>My new journey as a bootcamp student.</h2>
-    <p>
-      After several months of learning in the Frontend Developer Career Path,
-      I've made the big jump over to the Bootcamp to get expert code reviews
-      of my Solo Projects projects and meet like-minded peers.
-    </p>
-  </div>
 
-  <!-- <div class="blog-card">
-    <img src="assets/images/blog-image-05.png" alt="a desk with a coder's laptop">
-    <p class="date">July 23, 2023</p>
-    <h3>Blog one</h3>
-    <p>I'm excited to start a new learning journey as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p>
-  </div> -->
-  <!-- <div class="blog-card">
-    <img src="assets/images/blog-image-04.png" alt="a desk with a coder's laptop">
-    <p class="date">July 23, 2023</p>
-    <h3>Blog two</h3>
-    <p>I'm excited to start a new learning journey as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p>
-  </div>
-  <div class="blog-card">
-    <img src="assets/images/blog-image-03.png" alt="a desk with a coder's laptop">
-    <p class="date">July 23, 2023</p>
-    <h3>Blog three</h3>
-    <p>I'm excited to start a new learning journey as a Scrimba Bootcamp student! After several months of learning in the Frontend Developer Career Path.</p>
-  </div>
-  <h4>View More</h4>
+  <section id="frontPage">
+    <div id="hero">
+      <p>July 23, 2023</p>
+      <h2>My new journey as a bootcamp student.</h2>
+      <p>
+        After several months of learning in the Frontend Developer Career Path,
+        I've made the big jump over to the Bootcamp to get expert code reviews
+        of my Solo Projects projects and meet like-minded peers.
+      </p>
+    </div>
+    <div id="blog-one" class="blog-card">
+      <img src="assets/images/blog-image-06.png" alt="a desk with a coder's laptop" />
+      <p class="date">July 23, 2023</p>
+      <h3>Blog one</h3>
+      <p>
+        I'm excited to start a new learning journey as a Scrimba Bootcamp
+        student! After several months of learning in the Frontend Developer
+        Career Path.
+      </p>
+    </div>
+    <div id="blog-two" class="blog-card">
+      <img src="assets/images/blog-image-04.png" alt="a desk with a coder's laptop" />
+      <p class="date">July 23, 2023</p>
+      <h3>Blog two</h3>
+      <p>
+        I'm excited to start a new learning journey as a Scrimba Bootcamp
+        student! After several months of learning in the Frontend Developer
+        Career Path.
+      </p>
+    </div>
+    <div id="blog-three" class="blog-card">
+      <img src="assets/images/blog-image-05.png" alt="a desk with a coder's laptop" />
+      <p class="date">July 23, 2023</p>
+      <h3>Blog three</h3>
+      <p>
+        I'm excited to start a new learning journey as a Scrimba Bootcamp
+        student! After several months of learning in the Frontend Developer
+        Career Path.
+      </p>
+    </div>
+    <div id="blog-four" class="blog-card">
+      <img src="assets/images/blog-image-03.png" alt="a desk with a coder's laptop" />
+      <p class="date">July 23, 2023</p>
+      <h3>Blog four</h3>
+      <p>
+        I'm excited to start a new learning journey as a Scrimba Bootcamp
+        student! After several months of learning in the Frontend Developer
+        Career Path.
+      </p>
+    </div>
+    <div id="blog-five" class="blog-card">
+      <img src="assets/images/blog-image-01.png" alt="a desk with a coder's laptop" />
+      <p class="date">July 23, 2023</p>
+      <h3>Blog five</h3>
+      <p>
+        I'm excited to start a new learning journey as a Scrimba Bootcamp
+        student! After several months of learning in the Frontend Developer
+        Career Path.
+      </p>
+    </div>
+    <div id="blog-six" class="blog-card">
+      <img src="assets/images/blog-image-02.png" alt="a desk with a coder's laptop" />
+      <p class="date">July 23, 2023</p>
+      <h3>Blog six</h3>
+      <p>
+        I'm excited to start a new learning journey as a Scrimba Bootcamp
+        student! After several months of learning in the Frontend Developer
+        Career Path.
+      </p>
+    </div>
+    <button type="button">View More</button>
+  </section>
   <footer>
     <h5>My Learning Journal</h5>
     <p>Copyright 2023</p>
-  </footer> -->
+  </footer>
 </body>
 
 </html>
